# Warehouse_Example

./: CMakeLists.txt  ENV_SETUP.md  NamingConvention.cpp  README.md  setup.bash
Warehouse/: CMakeLists.txt  Requirements.md
Warehouse/include/Departments/: DepartmentsList.hpp
Warehouse/include/Factory/: ProductFactory.hpp
Warehouse/include/Interfaces/: ProductFlags.hpp
Warehouse/include/Products/: ProductsList.hpp
Warehouse/include/Warehouse/: Warehouse.h
Warehouse/src/: main.cpp
Warehouse/src/Warehouse/: Warehouse.cpp
Warehouse/test/: TestProducts.cpp
